# endoscopy-RAG-azure

./: .dockerignore  .gitignore  Dockerfile  README.md  clients.py  functions.py  main.py  pyproject.toml  requirements.txt
app/: functions.py  main.py  prompt_optimizer.py
app/prompts/: json_summary_prompt.yaml  recommendation_prompt.yaml  summary_prompt.yaml
client_scripts/: send_data.py
documents/: up_to_date_polypsurveillance.txt  updated_polyp_surveillance.txt  updated_surveillance_family.txt
tests/: tests.py
